# src/frontend/openapi.json
@@ -544,6 +544,86 @@
         }
       }
     },
+    "/api/lanes/operations/{laneId}/undo": {
+      "post": {
+        "tags": [
+          "LaneOperations"
+        ],
+        "parameters": [
+          {
+            "name": "laneId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/GameStateSnapshot"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GameStateSnapshot"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GameStateSnapshot"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/lanes/operations/{laneId}/skip-turn": {
+      "post": {
+        "tags": [
+          "LaneOperations"
+        ],
+        "parameters": [
+          {
+            "name": "laneId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/GameStateSnapshot"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GameStateSnapshot"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GameStateSnapshot"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/lanes/operations/{laneId}/extend": {
       "post": {
         "tags": [
@@ -2252,6 +2332,12 @@
                 "$ref": "#/components/schemas/ThrowRecord"
               }
             ]
+          },
+          "allThrows": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ThrowRecord"
+            }
           }
         }
       },
@@ -2654,6 +2740,12 @@
               "string"
             ],
             "format": "uuid"
+          },
+          "gameTypeId": {
+            "type": [
+              "null",
+              "string"
+            ]
           }
         }
       },
